@@ -3,6 +3,7 @@ $Id$
 2014-06-27  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
+	- Crucial/Micron RealSSD C300/M500: New attributes (ticket #326)
 	- SandForce Driven SSDs: ADATA XM11, Corsair Force LS, OWC Aura Pro 6G
 	  OWC Mercury Electra Pro 3G, PNY Prevail Elite, Transcend SSD320/720
 
